--- a/less/atom.less
+++ b/less/atom.less
@@ -52,6 +52,7 @@
 .vm(){ vertical-align: middle; }
 .tl(){ text-align: left; }
 .tr(){ text-align: right; }
+.tj(){ text-align: justify; }
 .t-through(){ text-decoration:line-through; }
 
 .hidden(){ overflow: hidden; }
